--- a/BusinessLayer/ProcessEmails.xaml
+++ b/BusinessLayer/ProcessEmails.xaml
@@ -3,11 +3,13 @@
     <x:Property Name="in_ApprovedList" Type="InArgument(x:String)" />
     <x:Property Name="out_Email" Type="OutArgument(snm:MailMessage)" />
     <x:Property Name="in_BRE1" Type="InArgument(x:String)" />
+    <x:Property Name="in_PathToSave" Type="InArgument(x:String)" />
+    <x:Property Name="in_BRE2" Type="InArgument(x:String)" />
   </x:Members>
   <VisualBasic.Settings>
     <x:Null />
   </VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>558.6666666666666,630.6666666666666</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>440,765.3333333333334</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>ProcessEmails_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
@@ -94,7 +96,7 @@
       <AssemblyReference>System.Linq.Queryable</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="ProcessEmails" sap:VirtualizedContainerService.HintSize="450,566" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="ProcessEmails" sap:VirtualizedContainerService.HintSize="450,700.6666666666666" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="scg:List(snm:MailMessage)" Name="EmailFilteredList" />
     </Sequence.Variables>
@@ -123,7 +125,11 @@
         <InArgument x:TypeArguments="x:String" x:Key="in_BRE1">
           <VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_BRE1" />
         </InArgument>
+        <InArgument x:TypeArguments="x:String" x:Key="in_BRE2">
+          <VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_BRE2" />
+        </InArgument>
       </ui:InvokeWorkflowFile.Arguments>
     </ui:InvokeWorkflowFile>
+    <ui:SaveMailAttachments Attachments="{x:Null}" DisplayName="Save Attachments - Process Emails" ExcludeInlineAttachments="False" FolderPath="[in_PathToSave]" sap:VirtualizedContainerService.HintSize="388,94.66666666666667" sap2010:WorkflowViewState.IdRef="SaveMailAttachments_1" Message="[out_Email]" OverwriteExisting="False" />
   </Sequence>
 </Activity>
